--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "typecheck": "tsc -p tsconfig.json --noEmit",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:e2e": "playwright test --project=chromium"
+    "test:e2e": "playwright test --project=chromium",
+    "prepare": "husky"
   },
   "dependencies": {
     "next": "16.1.1",
@@ -34,10 +35,20 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "eslint-config-prettier": "10.1.8",
+    "husky": "^9.1.7",
     "jsdom": "27.4.0",
+    "lint-staged": "^16.2.7",
     "prettier": "3.7.4",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "4.0.16"
+  },
+  "lint-staged": {
+    "*.{ts,tsx,js,jsx,css,scss,md,json,yml,yaml}": [
+      "prettier --write"
+    ],
+    "*.{ts,tsx,js,jsx}": [
+      "eslint --fix"
+    ]
   }
 }
