--- a/package.json
+++ b/package.json
@@ -13,11 +13,17 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:e2e": "playwright test --project=chromium",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
     "prepare": "husky"
   },
   "dependencies": {
+    "@prisma/adapter-pg": "7.2.0",
+    "@prisma/client": "7.2.0",
     "next": "16.1.1",
     "next-themes": "^0.4.6",
+    "pg": "8.17.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
@@ -29,9 +35,11 @@
     "@testing-library/react": "16.3.1",
     "@testing-library/user-event": "14.6.1",
     "@types/node": "^24",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "4.5.2",
+    "dotenv": "17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
     "eslint-config-prettier": "10.1.8",
@@ -39,6 +47,7 @@
     "jsdom": "27.4.0",
     "lint-staged": "^16.2.7",
     "prettier": "3.7.4",
+    "prisma": "7.2.0",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "4.0.16"
