--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "db:migrate": "prisma migrate dev",
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
+    "db:seed": "prisma db seed",
     "prepare": "husky"
   },
   "dependencies": {
@@ -49,6 +50,7 @@
     "prettier": "3.7.4",
     "prisma": "7.2.0",
     "tailwindcss": "^4",
+    "tsx": "^4.21.0",
     "typescript": "^5",
     "vitest": "4.0.16"
   },
