--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "next-themes": "^0.4.6",
     "pg": "8.17.1",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "zod": "4.3.5"
   },
   "devDependencies": {
     "@playwright/test": "1.57.0",
