--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "pg": "8.17.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "server-only": "^0.0.1",
     "zod": "4.3.5"
   },
   "devDependencies": {
