--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,22 @@ on:
 jobs:
   ci:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: saas_foundations_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U postgres -d saas_foundations_test"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+    env:
+      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/saas_foundations_test?schema=public
 
     steps:
       - name: Checkout repository
@@ -28,15 +44,7 @@ jobs:
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
-      - name: Set up Postgres
-        uses: ankane/setup-postgres@v1
-        with:
-          postgres-version: 16
-          database: saas_foundations_test
-
       - name: Run database migrations
-        env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/saas_foundations_test?schema=public
         run: |
           pnpm db:generate
           pnpm prisma migrate deploy
@@ -51,8 +59,6 @@ jobs:
         run: pnpm typecheck
 
       - name: Run tests
-        env:
-          DATABASE_URL: postgresql://postgres:postgres@localhost:5432/saas_foundations_test?schema=public
         run: pnpm test
 
       - name: Build
