--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Database
-# Local Docker Postgres connection string
-DATABASE_URL="postgresql://postgres:postgres@localhost:5432/saas_foundations_dev?schema=public"
+DATABASE_URL=postgresql://postgres:postgres@localhost:5432/saas_foundations_dev?schema=public
 
-# Application
-# NEXT_PUBLIC_APP_URL=http://localhost:3000
+# Token Hashing
+# Generate a secure random secret for token hashing (e.g., `openssl rand -hex 32`)
+TOKEN_HASH_SECRET=
