--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,7 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/saas_foundations_dev?
 # Token Hashing
 # Generate a secure random secret for token hashing (e.g., `openssl rand -hex 32`)
 TOKEN_HASH_SECRET=
+
+# Auth.js
+# Generate a secure random secret for Auth.js (e.g., `openssl rand -base64 32`)
+AUTH_SECRET=
