--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,10 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/saas_foundations_dev?
 # Generate a secure random secret for token hashing (e.g., `openssl rand -hex 32`)
 TOKEN_HASH_SECRET=
 
+# App URL
+# Public base URL for building verification links (e.g., http://localhost:3000)
+NEXT_PUBLIC_APP_URL=
+
 # Auth.js
 # Generate a secure random secret for Auth.js (e.g., `openssl rand -base64 32`)
 AUTH_SECRET=
