--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "@auth/prisma-adapter": "^2.11.1",
     "@prisma/adapter-pg": "7.2.0",
     "@prisma/client": "7.2.0",
+    "argon2": "^0.44.0",
     "next": "16.1.1",
     "next-auth": "5.0.0-beta.30",
     "next-themes": "^0.4.6",
