feat: add rate limiting to auth actions + eslint cache

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ NEXT_PUBLIC_APP_URL=
 # Auth.js
 # Generate a secure random secret for Auth.js (e.g., `openssl rand -base64 32`)
 AUTH_SECRET=
+
+# Upstash Redis (rate limiting)
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
