--- a/.env.test
+++ b/.env.test
@@ -2,3 +2,5 @@ DATABASE_URL=postgresql://postgres:postgres@localhost:5432/saas_foundations_dev?
 TOKEN_HASH_SECRET=test_token_hash_secret_do_not_use_in_production
 AUTH_SECRET=test_auth_secret_do_not_use_in_production
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+UPSTASH_REDIS_REST_URL=
+UPSTASH_REDIS_REST_TOKEN=
