--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint .",
+    "lint": "eslint . --cache --cache-location .eslintcache",
     "format": "prettier . --write",
     "format:check": "prettier . --check",
     "typecheck": "tsc -p tsconfig.json --noEmit",
@@ -22,6 +22,8 @@
   "dependencies": {
     "@prisma/adapter-pg": "7.2.0",
     "@prisma/client": "7.2.0",
+    "@upstash/ratelimit": "2.0.8",
+    "@upstash/redis": "1.36.1",
     "argon2": "^0.44.0",
     "next": "16.1.1",
     "next-auth": "5.0.0-beta.30",
