feat: add turnstile bot protection to signup

--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,28 @@
 # Database
+# Local dev: required. Prod: set in Vercel envs.
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/saas_foundations_dev?schema=public
 
 # Token Hashing
+# Required in all environments (set in .env.local for dev, Vercel for prod).
 # Generate a secure random secret for token hashing (e.g., `openssl rand -hex 32`)
 TOKEN_HASH_SECRET=
 
 # App URL
+# Required in all environments (set in .env.local for dev, Vercel for prod).
 # Public base URL for building verification links (e.g., http://localhost:3000)
 NEXT_PUBLIC_APP_URL=
 
 # Auth.js
+# Required in all environments (set in .env.local for dev, Vercel for prod).
 # Generate a secure random secret for Auth.js (e.g., `openssl rand -base64 32`)
 AUTH_SECRET=
 
 # Upstash Redis (rate limiting)
+# Optional for local dev (in-memory fallback). Required in prod for shared limits.
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
+
+# Cloudflare Turnstile (bot protection)
+# Optional for local dev (use official Cloudflare test keys). Required in prod when bot protection is enabled.
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=
+TURNSTILE_SECRET_KEY=
