--- a/.env.test
+++ b/.env.test
@@ -4,3 +4,5 @@ AUTH_SECRET=test_auth_secret_do_not_use_in_production
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
+NEXT_PUBLIC_TURNSTILE_SITE_KEY=1x00000000000000000000AA
+TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
