--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "pg": "8.17.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-turnstile": "1.1.4",
     "server-only": "^0.0.1",
     "zod": "4.3.5"
   },
