feat: add resend email adapter

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,14 @@ UPSTASH_REDIS_REST_TOKEN=
 # Optional for local dev (use official Cloudflare test keys). Required in prod when bot protection is enabled.
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=
 TURNSTILE_SECRET_KEY=
+
+# Email Provider (Resend)
+# Get your API key from https://resend.com/api-keys
+RESEND_API_KEY=
+EMAIL_FROM=noreply@example.com
+# Optional override: force a specific provider (e.g., "resend") for local debugging.
+EMAIL_PROVIDER=
+
+# Dev mailbox
+# Optional: custom path for the dev mailbox JSON file.
+DEV_MAILBOX_PATH=
