--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-turnstile": "1.1.4",
+    "resend": "6.8.0",
     "server-only": "^0.0.1",
     "zod": "4.3.5"
   },
