feat(auth): fail-closed rate limiting with opt-in fallback

--- a/.env.example
+++ b/.env.example
@@ -18,9 +18,11 @@ NEXT_PUBLIC_APP_URL=
 AUTH_SECRET=
 
 # Upstash Redis (rate limiting)
-# Optional for local dev (in-memory fallback). Required in prod for shared limits.
+# Optional for local dev (in-memory fallback). In production, missing envs fail closed unless fallback is enabled.
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
+# Optional: allow in-memory fallback in production (weaker across instances). Default is false.
+ALLOW_IN_MEMORY_RATE_LIMIT_FALLBACK=false
 
 # Cloudflare Turnstile (bot protection)
 # Optional for local dev (use official Cloudflare test keys). Required in prod when bot protection is enabled.
