--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,8 @@ ALLOW_IN_MEMORY_RATE_LIMIT_FALLBACK=false
 # Optional for local dev (use official Cloudflare test keys). Required in prod when bot protection is enabled.
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=
 TURNSTILE_SECRET_KEY=
+# Optional override: allow signups without Turnstile protection. Default is false.
+TURNSTILE_ALLOW_BYPASS=false
 
 # Email Provider (Resend)
 # Get your API key from https://resend.com/api-keys
