--- a/.env.test
+++ b/.env.test
@@ -1,8 +1,9 @@
 DATABASE_URL=postgresql://postgres:postgres@localhost:5432/saas_foundations_test?schema=public
 TOKEN_HASH_SECRET=test_token_hash_secret_do_not_use_in_production
 AUTH_SECRET=test_auth_secret_do_not_use_in_production
-NEXT_PUBLIC_APP_URL=http://localhost:3000
+NEXT_PUBLIC_APP_URL=http://localhost:3001
 UPSTASH_REDIS_REST_URL=
 UPSTASH_REDIS_REST_TOKEN=
 NEXT_PUBLIC_TURNSTILE_SITE_KEY=1x00000000000000000000AA
 TURNSTILE_SECRET_KEY=1x0000000000000000000000000000000AA
+#TURNSTILE_ALLOW_BYPASS=true
