--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -2,10 +2,30 @@ name: E2E Tests
 
 on:
   workflow_dispatch:
+  push:
+    branches: [main]
+  schedule:
+    - cron: "0 3 * * *"
 
 jobs:
   e2e:
     runs-on: ubuntu-latest
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: saas_foundations_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U postgres -d saas_foundations_test"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+    env:
+      DATABASE_URL: postgresql://postgres:postgres@localhost:5432/saas_foundations_test?schema=public
 
     steps:
       - name: Checkout repository
@@ -24,6 +44,11 @@ jobs:
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
+
+      - name: Run database migrations
+        run: |
+          pnpm db:generate
+          pnpm prisma migrate deploy
 
       - name: Install Playwright browsers
         run: pnpm exec playwright install chromium --with-deps
