--- a/package.json
+++ b/package.json
@@ -2,6 +2,15 @@
   "name": "saas-foundations-demo",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.27.0",
+  "engines": {
+    "node": ">=24.12.0 <25",
+    "pnpm": ">=10.27.0 <11"
+  },
+  "volta": {
+    "node": "24.12.0",
+    "pnpm": "10.27.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
