feat(marketing): add dashboard scroll story add theme-safe visual checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -58,6 +58,9 @@ jobs:
       - name: Type check
         run: pnpm typecheck
 
+      - name: Theme checks
+        run: pnpm theme:check
+
       - name: Run tests
         run: pnpm test
 
