--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@
 /coverage
 /playwright-report/
 /test-results/
+/test-results*/
+/test-results-*/
+**/.last-run.json
 /blob-report/
 /playwright/.cache/
 /.playwright-mcp/
